--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <div class="conteiner"></div>
+    <div class="conteiner">
+      <h1>Hello</h1>
+    </div>
   </body>
   <script src="src/app.js"></script>
 </html>
