--- a/index.html
+++ b/index.html
@@ -14,10 +14,54 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
+
   <body>
     <div class="conteiner">
-      <h1>Hello</h1>
+      <div class="header">
+        <h2>London |</h2>
+        <p>Monday 11:45</p>
+      </div>
+      <div class="weather-description row">
+        <span class="col-6"> ☁ Clear</span>
+        <ul class="col-6">
+          <li>Humidity: 10%</li>
+          <li>Wind speed: 20km/h</li>
+        </ul>
+      </div>
+      <hr />
+      <div class="currentTemperature">
+        <h1>23° C|F</h1>
+      </div>
+      <div class="forecast row">
+        <div class="week-days col">
+          <p>mon</p>
+          <p>☀</p>
+          <p>25°-15°</p>
+        </div>
+        <div class="week-days col">
+          <p>mon</p>
+          <p>☀</p>
+          <p>25°-15°</p>
+        </div>
+        <div class="week-days col">
+          <p>mon</p>
+          <p>☀</p>
+          <p>25°-15°</p>
+        </div>
+        <div class="week-days col">
+          <p>mon</p>
+          <p>☀</p>
+          <p>25°-15°</p>
+        </div>
+        <div class="week-days col">
+          <p>mon</p>
+          <p>☀</p>
+          <p>25°-15°</p>
+        </div>
+      </div>
     </div>
+    <small>Open-source by Macu Gimenez</small>
   </body>
+
   <script src="src/app.js"></script>
 </html>
