--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/c1c02b3758.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -23,16 +33,19 @@
           <p class="date">Monday 11:45</p>
         </div>
         <div class="weather-description row">
-          <span class="col-6 description"> ☁ Clear</span>
-          <ul class="col-6 humidity-windy">
-            <li>Humidity: 10%</li>
-            <li>Wind speed: 20km/h</li>
+          <span class="col-6 description position-absolute bottom-0 start-0">
+            ☁ Clear</span
+          >
+          <ul class="col-6 humidity-windy position-absolute bottom-0 end-0">
+            <li><i class="fa-solid fa-wind"></i> :10%</li>
+            <li><i class="fa-solid fa-cloud-rain"></i> :20km/h</li>
           </ul>
         </div>
         <hr />
-        <div class="currentTemperature">
-          <h1>23° C|F</h1>
+        <div class="current-temperature">
+          <h1>23°<span class="units"> C|F </span></h1>
         </div>
+        <hr />
         <div class="forecast row">
           <div class="week-days col">
             <p>mon</p>
