js working good

--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
         </div>
         <hr />
         <div class="current-temperature">
-          <h1 id="valueTemp">23</h1>
-          <span class="units">C | F
-
-            
-          </span>
-        </div>
-        <hr />
+          <h1 id="valueTemp"></h1> 
+          <div  class="units">
+            <a href="#"  id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a>
+          </div>         
+         </div>
+        
         <!--
         <div class="forecast row">
           <div class="week-days col">
