--- a/index.html
+++ b/index.html
@@ -36,20 +36,34 @@
           <p class="name" id="name"></p>
           <p class="date" id="date">Monday 11:45</p>
          </form>
-        </div>
+              </div>
+
         <div class="weather-description row">
-          <div class="col-6 description position-absolute bottom-0 start-0">
+          <div class="col-4 ">
            <img  class="icon" id="icon" src="http://openweathermap.org/img/wn/10d@2x.png" >
-           <div  id="description"></div>
+           <div  id="description" class="description"></div>
           </div>
-          <div class="col-6 position-absolute bottom-0 end-0">
-          <ul class="humidity-windy ">
-            <li><i class="fa-solid fa-wind"></i>:<span id="wind"></span>km/h</li>
-            <li><i class="fa-solid fa-cloud-rain" ></i>: <span id="humidity"></span> </li>
-          </ul>
+          <div class="col-4 wind">
+            <i class="fa-solid fa-wind "></i>
+            <br>
+            <div class="wind-speed">
+            <span id="wind"  ></span>
+            <span>km/h</span>  
+            </div>
+          </div>
+
+          <div class="col-4 humidity">
+          <i class="fa-solid fa-cloud-rain"></i>
+          <br>
+          <div class="humidity-text">
+            <span id="humidity" ></span>
+            <span></span>  
+            </div>
+          </div>
+        
         </div>
-     
-        </div>
+
+
         <hr />
         <div class="current-temperature">
           <h1 id="valueTemp"></h1> 
