--- a/index.html
+++ b/index.html
@@ -79,73 +79,7 @@
             <a href="#" id="fahrenheit-link">°F</a>
           </div>
         </div>
-
-        <div class="forecast row">
-          <div class="week-days col-2">
-            <p class="weather-forecaste-date">mon</p>
-            <img
-              class="icon"
-              id="icon"
-              src="http://openweathermap.org/img/wn/10d@2x.png"
-            />
-            <div class="weather-forecast-temperature">
-              <span class="weather-forecast-temperature-max">25°</span>
-              <span class="weather-forecast-temperature-min">15°</span>
-            </div>
-          </div>
-          <!--
-          <div class="week-days col">
-            <p class="weather-forecaste-date">mon</p>
-            <img
-              class="icon"
-              id="icon"
-              src="http://openweathermap.org/img/wn/10d@2x.png"
-            />
-            <div class="weather-forecast-temperature">
-              <span class="weather-forecast-temperature-max">25°</span>
-              <span class="weather-forecast-temperature-min">15°</span>
-            </div>
-          </div>
-
-          <div class="week-days col">
-            <p class="weather-forecaste-date">mon</p>
-            <img
-              class="icon"
-              id="icon"
-              src="http://openweathermap.org/img/wn/10d@2x.png"
-            />
-            <div class="weather-forecast-temperature">
-              <span class="weather-forecast-temperature-max">25°</span>
-              <span class="weather-forecast-temperature-min">15°</span>
-            </div>
-          </div>
-
-          <div class="week-days col">
-            <p class="weather-forecaste-date">mon</p>
-            <img
-              class="icon"
-              id="icon"
-              src="http://openweathermap.org/img/wn/10d@2x.png"
-            />
-            <div class="weather-forecast-temperature">
-              <span class="weather-forecast-temperature-max">25°</span>
-              <span class="weather-forecast-temperature-min">15°</span>
-            </div>
-          </div>
-
-          <div class="week-days col">
-            <p class="weather-forecaste-date">mon</p>
-            <img
-              class="icon"
-              id="icon"
-              src="http://openweathermap.org/img/wn/10d@2x.png"
-            />
-            <div class="weather-forecast-temperature">
-              <span class="weather-forecast-temperature-max">25°</span>
-              <span class="weather-forecast-temperature-min">15°</span>
-            </div>
-          </div> -->
-        </div>
+        <div class="forecast" id="forecast"></div>
       </div>
       <p class="developer">
         Open-source by
