--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
         <div class="current-temperature">
           <h1 id="valueTemp"></h1>
           <div class="units">
-            <a href="#" id="celsius-link" class="active">°C</a> |
-            <a href="#" id="fahrenheit-link">°F</a>
+            <span href="#" id="celsius-link" class="active">°C</span>
           </div>
         </div>
         <div class="forecast" id="forecast"></div>
