--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img
               class="icon"
               id="icon"
-              src="http://openweathermap.org/img/wn/10d@2x.png"
+              src="https://openweathermap.org/img/wn/10d@2x.png"
             />
             <div id="description" class="description"></div>
           </div>
@@ -81,10 +81,16 @@
         <div class="forecast" id="forecast"></div>
       </div>
       <p class="developer">
-        Open-source by
         <a href="https://github.com/macarenagimenez/weatherApp" target="_blank">
-          Macu Gimenez</a
+          Open-source
+        </a>
+        by
+        <a
+          href="https://www.linkedin.com/in/maria-macarena-gimenez"
+          target="_blank"
         >
+          Macu Gimenez
+        </a>
       </p>
     </div>
   </body>
